<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfinal"
    android:orientation="vertical"
    tools:context=".activities.RegisterPage"><![CDATA[

    EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerHeadLine"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/registerHead"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="1dp" />



        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="10dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:onClick="userProfilePic"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/line10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:src="@drawable/linebetter"
            app:srcCompat="@drawable/linebetter" />

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/registerUserName"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/registerUserName"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="10dp" />



        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/registerPassword"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/registerDateButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/buttonshape"
            android:text="@string/regiserSetDateButton"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />



        <TextView
            android:id="@+id/registerBirthDate"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="Your Birth Date"
            android:inputType="text"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="submitButton"
            android:text="@string/submitButton"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

    </LinearLayout>

</ScrollView>