<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfinal"
    tools:context=".activities.LoginScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintColor"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/hint"
                android:inputType="textEmailAddress"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintColor"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:hint="@string/hint2"
                android:inputType="textPassword"
                android:textAllCaps="true"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerButton2"
                android:layout_width="176dp"
                android:layout_height="20dp"
                android:background="@drawable/gradient"
                android:onClick="forgotPassButton"
                android:text="Forgot My Password"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                tools:text="Forgot My Password" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="loginButton"
        android:text="@string/loginText"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="registerButton"
        android:text="@string/registerButton"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="261dp"
        android:layout_height="137dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotwo" />

</android.support.constraint.ConstraintLayout>